made menu show for mobile only, fixed background not showing on large screens

--- a/_/css/main.css
+++ b/_/css/main.css
@@ -155,7 +155,7 @@ header figure img{
   html{
     line-height: 1.8em;
   }
-  #pagenav{
+  #pageNav{
     background:#fff;
     background: rgba(255,255,255, 0.2);
   }
